# endpoint.py
@@ -1,84 +1,62 @@
-from flask import make_response, abort
+from flask import make_response, abort, jsonify, request
 from config import db
-from models import Endpoint, EndpointSchema
+from models import Endpoint, DeserializeEndpoint, Training
 
 
 def getAllEndpoint():
 
-    endpoint = Endpoint.query.order_by(Endpoint.endpoint_name).all()
-
-    e_schema = EndpointSchema(many=True)
-    data = e_schema.dump(endpoint)
-    return data 
+    endpoints = Endpoint.query.order_by(Endpoint.endpoint_name).all()
+    return jsonify(endpoints=[endpoint.serialize() for endpoint in endpoints]) 
 
 
-def newEndpoint(endpoint):
+def newEndpoint( training_id, endpoint):
 
-    endpoint_name = endpoint.get("endpoint_name")
-
-    existing_endpoint = Endpoint.query.filter(Endpoint.endpoint_name == endpoint_name).one_or_none()
-
+    training = Training.query.filter(Training.training_id == training_id).one_or_none()
     
-    if existing_endpoint is None:
+    if training is not None:
+        newEndpoint =  Endpoint(endpoint_id = endpoint.get("endpoint_id"), endpoint_name = endpoint.get("endpoint_name"))
 
-        schema = EndpointSchema()
-        newEndpoint = schema.load(endpoint)
-
-        # Add the person to the database
+        training.endpoints.append(newEndpoint)
         db.session.add(newEndpoint)
         db.session.commit()
 
-        # Serialize and return the newly created person in the response
-        data = schema.dump(newEndpoint)
-        return data, 201
-
-    # Otherwise, nope, person exists already
+        return jsonify(newEndpoint.serialize()), 201
     else:
         abort(409,"Endpoint {endpoint_name} exists already".format(endpoint_name=endpoint_name),)
 
 
-def getEndpointById(endpoint_id):
+    
 
-    endpoint = Endpoint.query.filter(Endpoint.endpoint_id == endpoint_id).one_or_none()
+def getEndpointById(training_id, endpoint_id):
+
+    endpoint =  Endpoint.query.join(Training, Training.training_id == Endpoint.training_id).filter(Training.training_id == training_id).filter(Endpoint.endpoint_id == endpoint_id).one_or_none()
 
     if endpoint is not None:
-        e_schema = EndpointSchema()
-        data = e_schema.dump(endpoint)
-        return data
-
+        return jsonify(endpoint.serialize())
     else:
         abort(404, "Endpoint not found for Id: {endpoint_id}".format(endpoint_id=endpoint_id),)
-    
 
 
-
-
-
-def updateEndpoint(endpoint_id,endpoint):
+def updateEndpoint(training_id, endpoint_id, endpoint):
 
     
-    update_endpoint = Endpoint.query.filter(Endpoint.endpointid == endpoint_id).one_or_none()
+    update_endpoint = Endpoint.query.filter(Training.training_id == training_id).filter(Endpoint.endpointid == endpoint_id).one_or_none()
 
     if update_endpoint is not None:
-        schema = EndpointSchema()
-        update = schema.load(endpoint)
 
-        update.endpoint_id = update_endpoint.endpoint_id
-
-        db.session.merge(update)
+        data = request.get_json()
+        update_endpoint.deserialize(data)
         db.session.commit()
-
-        data = schema.dump(update_endpoint)
-
-        return data, 200
+        
+        return jsonify(update_endpoint.serialize()), 200
 
     else:
-        abort(404, f"Endpoint not found for Id: {endpoint_id}")
+        abort(404, "Endpoint not found for Id: {endpoint_id}".format(endpoint_id = endpoint_id))
 
 
-def deleteEndpoint(endpoint_id):
+def deleteEndpoint(training_id, endpoint_id):
 
-    endpoint = Endpoint.query.filter(Endpoint.endpoint_id == endpoint_id).one_or_none()
+    endpoint = Endpoint.query.filter(Training.training_id == training_id).filter(Endpoint.endpointid == endpoint_id).one_or_none()
 
     if endpoint is not None:
         db.session.delete(endpoint)
@@ -92,3 +70,21 @@ def deleteEndpoint(endpoint_id):
         abort(
             404, "Endpoint with this id: {endpoint_id} not found".format(endpoint_id=endpoint_id)
         )
+
+
+'''
+CORPO DELLA POST 
+    endpoint_name = endpoint.get("endpoint_name")
+    endpoint_training_id = endpoint.get("training_id")
+    existing_endpoint = Endpoint.query.filter(Endpoint.endpoint_name == endpoint_name).filter(Endpoint.training_id == endpoint_training_id).one_or_none()
+    if existing_endpoint is  None:
+        newEndpoint =  Endpoint(endpoint_id = endpoint.get("endpoint_id"), endpoint_name = endpoint.get("endpoint_name"))
+
+        db.session.add(newEndpoint)
+        db.session.commit()
+
+        return jsonify(newEndpoint.serialize()), 201
+
+    else:
+        abort(409,"Endpoint {endpoint_name} exists already".format(endpoint_name=endpoint_name),)
+'''
