# models.py
@@ -1,7 +1,8 @@
 from datetime import datetime
-from config import db, ma
-from marshmallow import fields
-from marshmallow_sqlalchemy import SQLAlchemyAutoSchema
+from config import db
+from typing import List
+
+
 
 class Notebook(db.Model):
 	__tablename__= "notebook"
@@ -9,13 +10,23 @@ class Notebook(db.Model):
 	notebook_name = db.Column(db.String(120))
 	createdDate = db.Column( db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow)
 
-class NotebookSchema(ma.SQLAlchemyAutoSchema):
+	
+	def serialize(self):
+		return {
+			"notebook_id": self.notebook_id,
+			"notebook_name": self.notebook_name,
+			"createdDate": str(datetime.now())
+		}
 
-	class Meta:
-		model = Notebook
-		sqla_session = db.session
-		load_instance = True
-		include_relationships = True
+	def deserialize(self, data):
+		for field in ['notebook_id', 'notebook_name', 'createdDate']:
+			if field in data:
+				setattr(self,field, data[field])
+
+class DeserializeNotebook(object):
+    def __init__(self, notebooks: List[Notebook]):
+        self.notebooks = notebooks
+
 
 
 class Training(db.Model):
@@ -23,14 +34,25 @@ class Training(db.Model):
 	training_id = db.Column(db.Integer, primary_key=True)
 	training_name = db.Column(db.String(120))
 	createdDate = db.Column( db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow)
+	endpoints = db.relationship("Endpoint", backref= "training", cascade= "all, delete, delete-orphan", lazy= 'dynamic')
+	
+	def serialize(self):
+		return {
+			"training_id": self.training_id,
+			"training_name": self.training_name,
+			"createdDate": str(datetime.now()),
+			"endpoints": self.endpoints.count()
+		}
 
-class TrainingSchema(ma.SQLAlchemyAutoSchema):
+	def deserialize(self, data):
+		for field in ['training_id', 'training_name', 'createdDate']:
+			if field in data:
+				setattr(self,field, data[field])
 
-	class Meta:
-		model = Training
-		sqla_session = db.session
-		load_instance = True
-		include_relationships = True
+class DeserializeTraining(object):
+    def __init__(self, trainings: List[Training]):
+        self.trainings = trainings
+
 
 
 class Endpoint(db.Model):
@@ -38,11 +60,22 @@ class Endpoint(db.Model):
 	endpoint_id = db.Column(db.Integer, primary_key=True)
 	endpoint_name = db.Column(db.String(120))
 	createdDate = db.Column( db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow)
+	training_id = db.Column(db.Integer, db.ForeignKey('training.training_id'))
+	#Column(db.Integer, db.ForeignKey("training.training_id"), unique= True)
 
-class EndpointSchema(ma.SQLAlchemyAutoSchema):
+	def serialize(self):
+		return {
+			"endpoint_id": self.endpoint_id,
+			"endpoint_name": self.endpoint_name,
+			"createdDate": str(datetime.now()),
+			"training_id": self.training_id
+		}
 
-	class Meta:
-		model = Endpoint
-		sqla_session = db.session
-		load_instance = True
-		include_relationships = True
+	def deserialize(self, data):
+		for field in ['endpoint_id', 'endpoint_name', 'createdDate']:
+			if field in data:
+				setattr(self,field, data[field])
+
+class DeserializeEndpoint(object):
+    def __init__(self, endpoints: List[Endpoint]):
+        self.endpoints = endpoints
